--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Computer courses</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
     <section class="promo">
@@ -42,11 +46,29 @@
             </div>
             <div class="promo__order">
                 <button class="btn btn_red">Заказать курс</button>
-                <div class="promo__student-count">
-
+                <div class="counts">
+                    <div class="row">
+                        <div class="title">Учеников всего:</div>
+                        <div class="count">200</div>
+                    </div>
+                    <div class="row">
+                        <div class="title">Успешно закончили курс:</div>
+                        <div class="count">190</div>
+                    </div>
                 </div>
-                <div class="promo__student-profit">
-                    
+                <div class="profit">
+                    <div class="row">
+                        <div class="money">Заработано учениками:</div>
+                        <div class="money-count">400 000₽</div>
+                    </div>
+                    <div class="row">
+                        <div class="scale"></div>
+                        <div class="progress"></div>
+                    </div>
+                    <div class="row">
+                        <div class="start">0</div>
+                        <div class="finish">1 000 000₽</div>
+                    </div>
                 </div>
             </div>
         </div>
