--- a/src/index.html
+++ b/src/index.html
@@ -27,47 +27,52 @@
         <div class="container">
             <h1 class="promo__title">Первый курс по компьютерной сборке</h1>
             <div class="promo__date">
-                <div class="date__item">
+                <div class="date">
                     <div class="date__number">18</div>
                     <div class="date__name">Дней</div>
                 </div>
-                <div class="date__item">
+                <div class="date">
                     <div class="date__number">18</div>
                     <div class="date__name">Часов</div>
                 </div>
-                <div class="date__item">
+                <div class="date">
                     <div class="date__number">18</div>
                     <div class="date__name">Минут</div>
                 </div>
-                <div class="date__item">
+                <div class="date">
                     <div class="date__number">18</div>
                     <div class="date__name">Секунд</div>
                 </div>
             </div>
-            <div class="promo__order">
-                <button class="btn btn_red">Заказать курс</button>
-                <div class="counts">
-                    <div class="row">
-                        <div class="title">Учеников всего:</div>
-                        <div class="count">200</div>
+        </div>
+        <div class="promo__order">
+            <div class="container">
+                <div class="wrapper">
+                    <button class="btn btn_red">Заказать курс</button>
+                    <div class="counts">
+                        <div class="row">
+                            <div class="title">Учеников всего:</div>
+                            <div class="count">200</div>
+                        </div>
+                        <div class="row">
+                            <div class="title">Успешно закончили курс:</div>
+                            <div class="count">190</div>
+                        </div>
                     </div>
-                    <div class="row">
-                        <div class="title">Успешно закончили курс:</div>
-                        <div class="count">190</div>
-                    </div>
-                </div>
-                <div class="profit">
-                    <div class="row">
-                        <div class="money">Заработано учениками:</div>
-                        <div class="money-count">400 000₽</div>
-                    </div>
-                    <div class="row">
-                        <div class="scale"></div>
-                        <div class="progress"></div>
-                    </div>
-                    <div class="row">
-                        <div class="start">0</div>
-                        <div class="finish">1 000 000₽</div>
+                    <div class="profit">
+                        <div class="row">
+                            <div class="title">Заработано учениками:</div>
+                            <div class="count">400 000₽</div>
+                        </div>
+                        <div class="row_scale">
+                            <div class="scale">
+                                <div class="progress"></div>
+                            </div>
+                        </div>
+                        <div class="row row_bottom">
+                            <div class="title">0</div>
+                            <div class="title title_right">1 000 000₽</div>
+                        </div>
                     </div>
                 </div>
             </div>
