--- a/src/index.html
+++ b/src/index.html
@@ -78,5 +78,55 @@
             </div>
         </div>
     </section>
+
+    <section class="about">
+        <div class="container">
+            <div class="about__wrapper">
+                <div class="about__squear">
+                    <img src="img/PC.png" alt="pc" class="about__pc">
+                </div>
+                <div class="about__descr">
+                    <div class="about__title">
+                        Чем мы занимаемся?
+                    </div>
+                    <div class="about__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget neque, dignissim et feugiat elit augue in suspendisse egestas. Dictum vestibulum mi et sed nunc, orci fermentum vestibulum, morbi. Et neque, adipiscing sapien sem senectus praesent aenean consequat. Aenean facilisi turpis aliquet fringilla. Nunc sem felis sed interdum feugiat mattis elit, sollicitudin. Quam pharetra rhoncus risus, cursus id elementum aliquet. Nullam turpis arcu malesuada arcu interdum placerat nisi, lobortis. 
+                    </div>
+                </div>  
+            </div>
+        </div>
+    </section>
+
+    <section class="start">
+        <div class="container">
+            <div class="start__title">
+                <img src="icons/Ellipse.svg" alt="icon">
+                Быстрый старт
+            </div>
+            <div class="start__descr">
+                Больше 90% учеников прошли полный курс и смогли собрать свой первый компьютер
+            </div>
+            <div class="start__stat">
+                <div class="start__row">
+                    <div class="start__column_title">100%</div>
+                    <div class="start__column_title">75%</div>
+                    <div class="start__column_title">50%</div>
+                    <div class="start__column_title">Итог</div>
+                </div>
+                <div class="start__row">
+                    <div class="start__column_1"></div>
+                    <div class="start__column_2"></div>
+                    <div class="start__column_3"></div>
+                    <div class="start__column_4"></div>
+                </div>
+                <div class="start__row">
+                    <div class="start__column start__column_bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor. Velit, volutpat egestas fringilla mi porttitor tempus. Placerat dui.</div>
+                    <div class="start__column start__column_bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor. Velit, volutpat egestas fringilla mi porttitor tempus. Placerat dui.</div>
+                    <div class="start__column start__column_bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor. Velit, volutpat egestas fringilla mi porttitor tempus. Placerat dui.</div>
+                    <div class="start__column start__column_bottom">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor. Velit, volutpat egestas fringilla mi porttitor tempus. Placerat dui.</div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
