--- a/src/index.html
+++ b/src/index.html
@@ -128,5 +128,81 @@
             </div>
         </div>
     </section>
+
+    <section class="profession">
+        <div class="container">
+            <div class="profession__title">
+                Получите профессию прямо сейчас
+            </div>
+            <div class="profession__items">
+                <div class="profession__item">
+                    <img src="icons/icon-1.svg" alt="computer">
+                    <div class="profession__subtitle">
+                        Только практические навыки в работе
+                    </div>
+                    <div class="profession__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor. Velit, volutpat egestas fringilla mi porttitor tempus. Placerat dui.
+                    </div>
+                </div>
+                <div class="profession__item">
+                    <img src="icons/icon-2.svg" alt="flashcard">
+                    <div class="profession__subtitle">
+                        Работа на самом современном оборудовании
+                    </div>
+                    <div class="profession__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor. Velit, volutpat egestas fringilla mi porttitor tempus. Placerat dui.
+                    </div>
+                </div>
+                <div class="profession__item">
+                    <img src="icons/icon-3.svg" alt="cable">
+                    <div class="profession__subtitle">
+                        Сертификация по окончании обучения
+                    </div>
+                    <div class="profession__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus eget velit quisque accumsan amet tortor. Velit, volutpat egestas fringilla mi porttitor tempus. Placerat dui.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="partners">
+        <div class="container">
+            <div class="partners__title">
+                <img src="icons/Ellipse.svg" alt="icon">
+                Партнеры - топовые бренды
+            </div>
+            <div class="partners__items">
+                <div class="partners__row">
+                    <div class="partners__column">
+                        <img src="img/logo_partners.png" alt="logo">
+                    </div>
+                    <div class="partners__column">
+                        <img src="img/logo_partners.png" alt="logo">
+                    </div>
+                    <div class="partners__column">
+                        <img src="img/logo_partners.png" alt="logo">
+                    </div>
+                    <div class="partners__column">
+                        <img src="img/logo_partners.png" alt="logo">
+                    </div>
+                </div>
+                <div class="partners__row">
+                    <div class="partners__column">
+                        <img src="img/logo_partners.png" alt="logo">
+                    </div>
+                    <div class="partners__column">
+                        <img src="img/logo_partners.png" alt="logo">
+                    </div>
+                    <div class="partners__column">
+                        <img src="img/logo_partners.png" alt="logo">
+                    </div>
+                    <div class="partners__column">
+                        <img src="img/logo_partners.png" alt="logo">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
