Complite HTML and CSS

--- a/src/index.html
+++ b/src/index.html
@@ -204,5 +204,138 @@
             </div>
         </div>
     </section>
+
+    <section class="program">
+        <div class="container">
+            <div class="program__title">
+                <img src="icons/Ellipse.svg" alt="icon">
+                Программа обучения
+            </div>
+            <div class="program__descr">
+                Больше 90% учеников прошли полный курс и смогли собрать свой первый компьютер
+            </div>
+            <div class="program__weeks">
+                <div class="program__column">
+                    <div class="program__week program__week_left">
+                        <div class="program__week-number">
+                            Неделя №1
+                        </div>
+                        <div class="program__text">
+                            Красивая часть курса, которая помогает в успехе
+                        </div>
+                    </div>
+                    <div class="program__week program__week_left">
+                        <div class="program__week-number">
+                            Неделя №3
+                        </div>
+                        <div class="program__text">
+                            Красивая часть курса, которая помогает в успехе
+                        </div>
+                    </div>
+                    <div class="program__week program__week_left">
+                        <div class="program__week-number">
+                            Неделя №5
+                        </div>
+                        <div class="program__text">
+                            Красивая часть курса, которая помогает в успехе
+                        </div>
+                    </div>
+                    <div class="program__week program__week_left">
+                        <div class="program__week-number">
+                            Неделя №7
+                        </div>
+                        <div class="program__text">
+                            Красивая часть курса, которая помогает в успехе
+                        </div>
+                    </div>
+                </div>
+                <div class="program__divider"></div>
+                <div class="program__column program__column_right">
+                    <div class="program__week program__week_right">
+                        <div class="program__week-number">
+                            Неделя №2
+                        </div>
+                        <div class="program__text">
+                            Красивая часть курса, которая помогает в успехе
+                        </div>
+                    </div>
+                    <div class="program__week program__week_right">
+                        <div class="program__week-number">
+                            Неделя №4
+                        </div>
+                        <div class="program__text">
+                            Красивая часть курса, которая помогает в успехе
+                        </div>
+                    </div>
+                    <div class="program__week program__week_right">
+                        <div class="program__week-number">
+                            Неделя №6
+                        </div>
+                        <div class="program__text">
+                            Красивая часть курса, которая помогает в успехе
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="teachers">
+        <div class="container">
+            <div class="teachers__title">
+                <img src="icons/Ellipse.svg" alt="icon">
+                Ваши преподаватели
+            </div>
+            <div class="teachers__items">
+                <div class="teachers__item">
+                    <img src="img/teacher_1.png" alt="teacher_1">
+                    <div class="teachers__name">Дмитрий Иванов</div>
+                    <div class="teachers__speciality">Специалист по видеокартам</div>
+                    <div class="teachers__biography">Биография</div>
+                </div>
+                <div class="teachers__item">
+                    <img src="img/teacher_2.png" alt="teacher_2">
+                    <div class="teachers__name">Дмитрий Иванов</div>
+                    <div class="teachers__speciality">Специалист по видеокартам</div>
+                    <div class="teachers__biography">Биография</div>
+                </div>
+                <div class="teachers__item">
+                    <img src="img/teacher_3.png" alt="teacher_3">
+                    <div class="teachers__name">Дмитрий Иванов</div>
+                    <div class="teachers__speciality">Специалист по видеокартам</div>
+                    <div class="teachers__biography">Биография</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="contacts">
+        <div class="container">
+            <div class="contacts__title">
+                Статьи каждую неделю
+            </div>
+            <div class="contacts__descr">
+                Больше 90% учеников прошли полный курс и смогли собрать свой первый компьютер
+            </div>
+            <div class="contacts__email">
+                E-mail
+                <div class="contacts__subscribe">Подписаться</div>
+            </div>
+            <div class="contacts__social">
+                <div class="contacts__social-item">
+                    <img src="icons/vk.svg" alt="vk">
+                </div>
+                <div class="contacts__social-item">
+                    <img src="icons/youtube.svg" alt="youtube">
+                </div>
+                <div class="contacts__social-item">
+                    <img src="icons/facebook.svg" alt="facebook">
+                </div>
+                <div class="contacts__social-item">
+                    <img src="icons/instagram.svg" alt="instagram">
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
