--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,20 @@
     <section class="promo">
         <div class="menu">
             <img src="icons/logo.svg" alt="logo" class="logo">
-            <div class="menu__navigation">
-                <div class="menu__item"><a href="#">Главная</a></div>
-                <div class="menu__item"><a href="#">Курсы</a></div>
-                <div class="menu__item"><a href="#">Расписание</a></div>
-                <div class="menu__item"><a href="#">Преподаватели</a></div>
-                <div class="menu__item"><a href="#">Рассылка</a></div>
-                <div class="menu__item"><a href="#">Контакты</a></div>
+            <div class="menu__icon">
+                <span></span>
             </div>
-            <button class="btn btn_purple">Зайти в кабинет</button>
+            <nav class="menu__body">
+                <div class="menu__navigation">
+                    <div class="menu__item"><a href="#">Главная</a></div>
+                    <div class="menu__item"><a href="#">Курсы</a></div>
+                    <div class="menu__item"><a href="#">Расписание</a></div>
+                    <div class="menu__item"><a href="#">Преподаватели</a></div>
+                    <div class="menu__item"><a href="#">Рассылка</a></div>
+                    <div class="menu__item"><a href="#">Контакты</a></div>
+                    <button class="btn btn_purple">Зайти в кабинет</button>
+                </div>
+            </nav> 
         </div>
         <div class="container">
             <h1 class="promo__title">Первый курс по компьютерной сборке</h1>
@@ -79,7 +84,7 @@
         </div>
     </section>
 
-    <section class="about">
+    <!-- <section class="about">
         <div class="container">
             <div class="about__wrapper">
                 <div class="about__squear">
@@ -95,9 +100,9 @@
                 </div>  
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="start">
+    <!-- <section class="start">
         <div class="container">
             <div class="start__title">
                 <img src="icons/Ellipse.svg" alt="icon">
@@ -127,9 +132,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="profession">
+    <!-- <section class="profession">
         <div class="container">
             <div class="profession__title">
                 Получите профессию прямо сейчас
@@ -164,9 +169,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="partners">
+    <!-- <section class="partners">
         <div class="container">
             <div class="partners__title">
                 <img src="icons/Ellipse.svg" alt="icon">
@@ -203,9 +208,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="program">
+    <!-- <section class="program">
         <div class="container">
             <div class="program__title">
                 <img src="icons/Ellipse.svg" alt="icon">
@@ -278,9 +283,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="teachers">
+    <!-- <section class="teachers">
         <div class="container">
             <div class="teachers__title">
                 <img src="icons/Ellipse.svg" alt="icon">
@@ -307,9 +312,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="contacts">
+    <!-- <section class="contacts">
         <div class="container">
             <div class="contacts__title">
                 Статьи каждую неделю
@@ -336,6 +341,8 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
+
+    <script src="js/script.js"></script>
 </body>
 </html>
