--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <section class="promo">
+    <section id="promo" class="promo">
         <div class="menu">
             <img src="icons/logo.svg" alt="logo" class="logo">
             <div class="menu__icon">
@@ -19,33 +19,33 @@
             </div>
             <nav class="menu__body">
                 <div class="menu__navigation">
-                    <div class="menu__item"><a href="#">Главная</a></div>
-                    <div class="menu__item"><a href="#">Курсы</a></div>
-                    <div class="menu__item"><a href="#">Расписание</a></div>
-                    <div class="menu__item"><a href="#">Преподаватели</a></div>
-                    <div class="menu__item"><a href="#">Рассылка</a></div>
-                    <div class="menu__item"><a href="#">Контакты</a></div>
+                    <div class="menu__item"><a href="#promo">Главная</a></div>
+                    <div class="menu__item"><a href="#about">Курсы</a></div>
+                    <div class="menu__item"><a href="#program">Расписание</a></div>
+                    <div class="menu__item"><a href="#teachers">Преподаватели</a></div>
+                    <div class="menu__item"><a href="#contacts">Рассылка</a></div>
+                    <div class="menu__item"><a href="#contacts">Контакты</a></div>
                     <button class="btn btn_purple">Зайти в кабинет</button>
                 </div>
             </nav> 
         </div>
         <div class="container">
             <h1 class="promo__title">Первый курс по компьютерной сборке</h1>
-            <div class="promo__date">
+            <div class="promo__date timer">
                 <div class="date">
-                    <div class="date__number">18</div>
+                    <div id="days" class="date__number">18</div>
                     <div class="date__name">Дней</div>
                 </div>
                 <div class="date">
-                    <div class="date__number">18</div>
+                    <div id="hours" class="date__number">18</div>
                     <div class="date__name">Часов</div>
                 </div>
                 <div class="date">
-                    <div class="date__number">18</div>
+                    <div id="minutes" class="date__number">18</div>
                     <div class="date__name">Минут</div>
                 </div>
                 <div class="date">
-                    <div class="date__number">18</div>
+                    <div id="seconds" class="date__number">18</div>
                     <div class="date__name">Секунд</div>
                 </div>
             </div>
@@ -84,25 +84,25 @@
         </div>
     </section>
 
-    <!-- <section class="about">
+    <section id="about" class="about">
         <div class="container">
             <div class="about__wrapper">
                 <div class="about__squear">
                     <img src="img/PC.png" alt="pc" class="about__pc">
                 </div>
                 <div class="about__descr">
-                    <div class="about__title">
+                    <h2 class="about__title">
                         Чем мы занимаемся?
-                    </div>
+                    </h2>
                     <div class="about__text">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Eget neque, dignissim et feugiat elit augue in suspendisse egestas. Dictum vestibulum mi et sed nunc, orci fermentum vestibulum, morbi. Et neque, adipiscing sapien sem senectus praesent aenean consequat. Aenean facilisi turpis aliquet fringilla. Nunc sem felis sed interdum feugiat mattis elit, sollicitudin. Quam pharetra rhoncus risus, cursus id elementum aliquet. Nullam turpis arcu malesuada arcu interdum placerat nisi, lobortis. 
                     </div>
                 </div>  
             </div>
         </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="start">
+    <section class="start">
         <div class="container">
             <div class="start__title">
                 <img src="icons/Ellipse.svg" alt="icon">
@@ -132,9 +132,9 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="profession">
+    <section class="profession">
         <div class="container">
             <div class="profession__title">
                 Получите профессию прямо сейчас
@@ -169,9 +169,9 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="partners">
+    <section class="partners">
         <div class="container">
             <div class="partners__title">
                 <img src="icons/Ellipse.svg" alt="icon">
@@ -208,9 +208,9 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="program">
+    <section id="program" class="program">
         <div class="container">
             <div class="program__title">
                 <img src="icons/Ellipse.svg" alt="icon">
@@ -283,9 +283,9 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="teachers">
+    <section id="teachers" class="teachers">
         <div class="container">
             <div class="teachers__title">
                 <img src="icons/Ellipse.svg" alt="icon">
@@ -312,9 +312,9 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="contacts">
+    <section id="contacts" class="contacts">
         <div class="container">
             <div class="contacts__title">
                 Статьи каждую неделю
@@ -341,7 +341,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <script src="js/script.js"></script>
 </body>
