Fix button, added cursore pointer

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 <body>
     <section id="promo" class="promo">
         <div class="menu">
-            <img src="icons/logo.svg" alt="logo" class="logo">
+            <a href="#"><img src="icons/logo.svg" alt="logo" class="logo"></a>
             <div class="menu__icon">
                 <span></span>
             </div>
@@ -296,19 +296,19 @@
                     <img src="img/teacher_1.png" alt="teacher_1">
                     <div class="teachers__name">Дмитрий Иванов</div>
                     <div class="teachers__speciality">Специалист по видеокартам</div>
-                    <div class="teachers__biography">Биография</div>
+                    <button class="teachers__biography">Биография</button>
                 </div>
                 <div class="teachers__item">
                     <img src="img/teacher_2.png" alt="teacher_2">
                     <div class="teachers__name">Дмитрий Иванов</div>
                     <div class="teachers__speciality">Специалист по видеокартам</div>
-                    <div class="teachers__biography">Биография</div>
+                    <button class="teachers__biography">Биография</button>
                 </div>
                 <div class="teachers__item">
                     <img src="img/teacher_3.png" alt="teacher_3">
                     <div class="teachers__name">Дмитрий Иванов</div>
                     <div class="teachers__speciality">Специалист по видеокартам</div>
-                    <div class="teachers__biography">Биография</div>
+                    <button class="teachers__biography">Биография</button>
                 </div>
             </div>
         </div>
